Thesis updates for expanding future work sections.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -774,3 +774,65 @@ year = {2015}
   author={Crockford, Douglas},
   year={2006}
 }
+
+@Misc{chrome,
+author = {{Google}},
+title = {{Chrome}},
+howpublished = {\url{http://www.google.com/chrome/}},
+year = {2015}
+}
+
+@book{midi1996complete,
+  title={The complete MIDI 1.0 detailed specification: incorporating all recommended practices},
+  author={MIDI Manufacturers Association and others},
+  year={1996},
+  publisher={MIDI Manufacturers Association}
+}
+
+@article{chapados2008cross,
+  title={Cross-modal interactions in the experience of musical performances: Physiological correlates},
+  author={Chapados, Catherine and Levitin, Daniel J},
+  journal={Cognition},
+  volume={108},
+  number={3},
+  pages={639--651},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{gomez2004affective,
+  title={Affective and physiological responses to environmental noises and music},
+  author={Gomez, Patrick and Danuser, Brigitta},
+  journal={International Journal of psychophysiology},
+  volume={53},
+  number={2},
+  pages={91--103},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@book{kamp1993discourse,
+  title={From discourse to logic: Introduction to modeltheoretic semantics of natural language, formal logic and discourse representation theory},
+  author={Kamp, Hans and Reyle, Uwe},
+  number={42},
+  year={1993},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{harrison1978introduction,
+  title={Introduction to formal language theory},
+  author={Harrison, Michael A},
+  year={1978},
+  publisher={Addison-Wesley Longman Publishing Co., Inc.}
+}
+
+@inproceedings{kate2005learning,
+  title={Learning to transform natural to formal languages},
+  author={Kate, Rohit J and Wong, Yuk Wah and Mooney, Raymond J},
+  booktitle={Proceedings of the National Conference on Artificial Intelligence},
+  volume={20},
+  number={3},
+  pages={1062},
+  year={2005},
+  organization={Menlo Park, CA; Cambridge, MA; London; AAAI Press; MIT Press; 1999}
+}
