Updating website with final presentation slides and improved thesis.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -276,6 +276,15 @@ By presenting my work, this thesis makes the following contributions:
 \item An evaluation of music Optical Character Recognition (OCR) software as a means of converting sheet music into a computer-readable MusicXML format.
 \end{enumerate}
 
+\section{Definition of Terms} 
+\label{sec:terms}
+
+Due to the nature of this research, several disciplines intersect and bring with them specific definitions and connotations for certain terms. Here I outline such terms used within this paper that may conflict with definitions used in practice by outside diciplines.
+
+First and most obvious are the terms ``complexity'' and ``difficulty''. Throughout this thesis, complexity and difficulty are utilized interchangably to refer to the level of play required to successfully reproduce or execute a piece of music by a performer. The intent for these terms is to correlate to the measurements specified in graded works. It is most analogous to the difficulty of an olympic dive being performed, where a higher score implies a higher degree of difficulty. Similarly, these terms do not encompass the measurement for what a performer actually does (how well the dive was executed). This is not necessarily true for the definitions of complexity and difficulty within the realms of psychology or philosophy, but for the purposes of this work, they are treated as identical.
+
+Along the same vein, here the terms mental and cognitive, as used to describe a certain component of complexity, are also used interchangably. In other disciplines mental and cognitive can separately refer somewhat analogously to affect and effect. In this thesis mental and cognitive are used in the same way to describe the components of complexity which are within a person's understanding (as in how difficult it is to simply understand exactly what a piece of music requires), as compared to mechanical or physical components (as in how difficult it is to execute the understood piece of music on a given instrument). Mental or cognitive compared to mechanical or physical is somewhat analogous to reading compared to writing.
+
 \section{Paper Roadmap} 
 \label{sec:layout}
 
