Updating thesis with Laban Movement Analysis references and fixing a bug between the regular website not loading because of the game website's javascript doing something different.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -836,3 +836,69 @@ year = {2015}
   year={2005},
   organization={Menlo Park, CA; Cambridge, MA; London; AAAI Press; MIT Press; 1999}
 }
+
+@book{maletic1987body,
+  title={Body-space-expression: The development of Rudolf Laban's movement and dance concepts},
+  author={Maletic, Vera},
+  volume={75},
+  year={1987},
+  publisher={Walter de Gruyter}
+}
+
+@book{bartenieff1980body,
+  title={Body movement: Coping with the environment},
+  author={Bartenieff, Irmgard},
+  year={1980},
+  publisher={Psychology Press}
+}
+
+@inproceedings{Chi2000,
+ author = {Chi, Diane and Costa, Monica and Zhao, Liwei and Badler, Norman},
+ title = {The EMOTE Model for Effort and Shape},
+ booktitle = {Proceedings of the 27th Annual Conference on Computer Graphics and Interactive Techniques},
+ series = {SIGGRAPH '00},
+ year = {2000},
+ isbn = {1-58113-208-5},
+ pages = {173--182},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1145/344779.352172},
+ doi = {10.1145/344779.352172},
+ acmid = {352172},
+ publisher = {ACM Press/Addison-Wesley Publishing Co.},
+ address = {New York, NY, USA},
+ keywords = {animation systems, expression, gestures, human body simulation, procedural modeling}
+}
+
+@incollection{camurri2004multimodal,
+  title={Multimodal analysis of expressive gesture in music and dance performances},
+  author={Camurri, Antonio and Mazzarino, Barbara and Ricchetti, Matteo and Timmers, Renee and Volpe, Gualtiero},
+  booktitle={Gesture-based communication in human-computer interaction},
+  pages={20--39},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{camurri2000eyesweb,
+  title={Eyesweb: Toward gesture and affect recognition in interactive dance and music systems},
+  author={Camurri, Antonio and Hashimoto, Shuji and Ricchetti, Matteo and Ricci, Andrea and Suzuki, Kenji and Trocca, Riccardo and Volpe, Gualtiero},
+  journal={Computer Music Journal},
+  volume={24},
+  number={1},
+  pages={57--69},
+  year={2000},
+  publisher={MIT Press}
+}
+
+@book{guest2005labanotation,
+  title={Labanotation: the system of analyzing and recording movement},
+  author={Guest, Ann Hutchinson},
+  year={2005},
+  publisher={Psychology Press}
+}
+
+@article{hutchinson1996labanotation,
+  title={Labanotation},
+  author={Hutchinson, Ann},
+  journal={Dance Books},
+  year={1996}
+}
