--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -337,6 +337,8 @@ The most relevant works to musiplectics are those that also seek to analyze the 
 
 Similar to \cite{Chiu2012}, \cite{Heijink2002} studies the complexity of playing guitar. Their work extracts features that determine difficulty when playing guitar. However, their focus lies more on the mechanical difficulties specifically associated with that instrument rather than broad ranging complexities of playing music on any instrument. Musiplectics also takes into account the playing proficiency of the player at hand.
 
+On a related tangent from both \cite{Chiu2012} and \cite{Heijink2002}, Laban Movement Analysis (LMA) \cite{maletic1987body} \cite{bartenieff1980body} \cite{Chi2000} provides a means of analyzing musical performances as they occur. LMA was originally created as a means of analyzing dance performances, but it has been used extensively in analyzing music performances as well \cite{camurri2004multimodal} \cite{camurri2000eyesweb}. The main difference between LMA (as well as the related field of Labanotation \cite{guest2005labanotation} \cite{hutchinson1996labanotation}) and the work presented here is when to analyze the complexity. LMA and Labanotation focus on the actual performance and the execution of a piece of music (or equivalently dance or many other physical motions), whereas Musiplectics focuses on the theoretical performance that has been specified by the piece of music.  However, the categories studied in LMA have some rough analogues with both \cite{Chiu2012} and \cite{Heijink2002}, and thus indirectly correlate with musical elements analyzed in Musiplectics.
+
 Another related approach lies in \cite{Liou2010}. The authors analyze the complexity of the rhythmic components of various pieces of music. They utilize the L-system to breakdown the rhythm of a piece into a tree structure and then apply tree analysis algorithms to generate a score. Although musiplectics avoids complex algorithms for examining the rhythmic structure of a piece, it considers a full array of the elements of music scores rather than simply rhythm alone.
 
 State organizations, such as \cite{VBODA} in Virginia and \cite{NYSSMA} in New York as well as others, similarly analyze music scores by hand, an activity which we hope to automate. These organizations govern K-12 schools in their respective states. They also list music pieces and their respective difficulty grades for district, regional, or state competitions for each K-12 grade level. Other organizations, such as the Royal Conservatory Music Development Program \cite{RoyalSyllabus}, offer similar pieces and respective grades as part of their level requirements and assessment regulations. Unlike state organizations, Royal Conservatory publishes their pieces and scores to the public, a provision that enables leveraging them in evaluating this work.
