Fixing the title of SEAD grant to have an 'a' instead of an 'e' as well as fixing the references to properly capitalize certain acronyms and titles.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -1,12 +1,12 @@
 @MISC{GS,
-title = {Google Scholar},
+title = {{Google Scholar}},
 month = Dec,
 year = {2014},
 howpublished = {\url{http://scholar.google.com/}}
 }
 
 @MISC{ACMDL,
-title = {ACM Digital Library},
+title = {{ACM Digital Library}},
 month = Dec,
 year = {2014},
 howpublished = {\url{http://dl.acm.org/}}
@@ -15,7 +15,7 @@ howpublished = {\url{http://dl.acm.org/}}
 
 @Misc{GithubMusicScoring,
 author = {Holder, Ethan},
-title = {MusicScoring},
+title = {{MusicScoring}},
 howpublished = {\url{https://github.com/xwsxethan/MusicScoring}},
 month = {2},
 year = {2015}
@@ -23,7 +23,7 @@ year = {2015}
 
 @Misc{FinaleNotepad,
 author = {{Makemusic Inc.}},
-title = {Finale Notepad},
+title = {{Finale Notepad}},
 howpublished = {\url{http://www.finalemusic.com/products/finale-notepad/}},
 month = {3},
 year = {2015}
@@ -63,7 +63,7 @@ year = {2012}
 
 @Misc{XMLAPI,
 author = {{Apache Xerces}},
-title = {The Apache Xerces™ Project},
+title = {{The Apache Xerces™ Project}},
 howpublished = {\url{http://xerces.apache.org/index.html}},
 day = {20},
 month = {1},
@@ -106,7 +106,7 @@ year = {2010}
 }
 
 @article{Seemore,
-  title={SeeMore},
+  title={{SeeMore}},
   author={Blanchard, Sam and Cameron, Kirk},
   journal={Leonardo},
   volume={47},
@@ -191,7 +191,7 @@ year = {2010}
 
 @article{Cataltepe2007,
  author = {Cataltepe, Zehra and Yaslan, Yusuf and Sonmez, Abdullah},
- title = {Music Genre Classification Using MIDI and Audio Features},
+ title = {Music Genre Classification Using {MIDI} and Audio Features},
  journal = {EURASIP J. Appl. Signal Process.},
  issue_date = {1 January 2007},
  volume = {2007},
@@ -249,7 +249,7 @@ year = {2015}
 
 @Misc{NYSSMA,
 author = {{NYSSMA New York State School Music Association}},
-title = {NYSSMA New York State School Music Association},
+title = {{NYSSMA New York State School Music Association}},
 howpublished = {\url{http://www.nyssma.org/}},
 year = {2015}
 }
@@ -263,7 +263,7 @@ year = {2015}
 
 @Misc{NotationSoft,
 author = {{Notation Software Germany}},
-title = {Notation Composer},
+title = {{Notation Composer}},
 howpublished = {\url{http://www.notation.com/NotationComposer.php}},
 year = {2014}
 }
@@ -284,7 +284,7 @@ year = {2015}
 
 @Misc{SharpEye,
 author = {{Visiv}},
-title = {SharpEye Music Scanning},
+title = {{SharpEye Music Scanning}},
 howpublished = {\url{http://www.visiv.co.uk/}},
 year = {2015}
 }
@@ -328,7 +328,7 @@ year = {2015}
 
 @Misc{MuseScore,
 author = {{MuseScore BVBA}},
-title = {MuseScore Share Your Sheet Music},
+title = {{MuseScore} Share Your Sheet Music},
 howpublished = {\url{https://musescore.com/}},
 year = {2015}
 }
@@ -385,7 +385,7 @@ year = {2015}
 }
 
 @inproceedings{byrd2006prospects,
-  title={Prospects for Improving OMR with Multiple Recognizers.},
+  title={Prospects for Improving {OMR} with Multiple Recognizers.},
   author={Byrd, Donald and Schindele, Megan},
   booktitle={ISMIR},
   pages={41--46},
@@ -430,7 +430,7 @@ journal = {Science}
 }
 
 @book{java,
-  title={The Java language specification},
+  title={The {Java} language specification},
   author={Gosling, James},
   year={2000},
   publisher={Addison-Wesley Professional}
@@ -476,20 +476,20 @@ journal = {Science}
 
 @Misc{SMT,
 author = {{Society for Music Theory}},
-title = {MTO a Journal for the Society for Music Theory},
+title = {{MTO a Journal for the Society for Music Theory}},
 howpublished = {\url{http://www.mtosmt.org/index.php}},
 year = {2015}
 }
 
 @Misc{MusicTheoryNet,
 author = {{MusicTheory.net LLC}},
-title = {MusicTheory.net},
+title = {{MusicTheory.net}},
 howpublished = {\url{http://www.musictheory.net/}},
 year = {2015}
 }
 
 @article{css,
-  title={Cascading Style Sheets, level 2 CSS2 Specification},
+  title={Cascading Style Sheets, level 2 {CSS2} Specification},
   author={Bos, Bert and Lie, H{\aa}kon Wium and Lilley, Chris and Jacobs, Ian},
   publisher={Citeseer}
 }
@@ -535,7 +535,7 @@ year = {2015}
 }
 
 @inproceedings{nguyen2007sloc,
-  title={A SLOC counting standard},
+  title={A {SLOC} counting standard},
   author={Nguyen, Vu and Deeds-Rubin, Sophia and Tan, Thomas and Boehm, Barry},
   booktitle={COCOMO II Forum},
   volume={2007},
@@ -565,7 +565,7 @@ year = {2015}
 }
 
 @inproceedings{holder2013cloudASE,
-  title={Cloud Twin: Native execution of android applications on the Windows Phone},
+  title={Cloud Twin: Native execution of {Android} applications on the {Windows Phone}},
   author={Holder, Ethan and Shah, Eeshan and Davoodi, Mohammed and Tilevich, Eli},
   booktitle={Automated Software Engineering (ASE), 2013 IEEE/ACM 28th International Conference on},
   pages={598--603},
@@ -582,7 +582,7 @@ year = {2015}
   organization={ACM}
 }
 
-@phdthesis{holder2014native,
+@thesis{holder2014native,
   title={Native Execution of Mobile Applications Across Platforms},
   author={Holder, Ethan G.},
   year={2014},
@@ -591,7 +591,7 @@ year = {2015}
 
 @Misc{mysql,
 author = {{Oracle Corporation}},
-title = {MySQL The world's most popular open source database},
+title = {{MySQL} The world's most popular open source database},
 howpublished = {\url{https://www.mysql.com/}},
 year = {2015}
 }
@@ -604,7 +604,7 @@ year = {2015}
 }
 
 @article{bloch2008effective,
-  title={Effective java (the java series)},
+  title={{Effective Java (the Java Series)}},
   author={Bloch, Joshua},
   year={2008},
   publisher={Prentice Hall PTR}
@@ -614,7 +614,7 @@ year = {2015}
 
 @book{phonegapBook,
  author = {Ghatol, Rohit and Patel, Yogesh},
- title = {Beginning PhoneGap: Mobile Web Framework for JavaScript and HTML5},
+ title = {Beginning {PhoneGap}: mobile web framework for {JavaScript} and {HTML5}},
  year = {2012},
  isbn = {1430239034, 9781430239031},
  edition = {1st},
@@ -707,7 +707,7 @@ language={English}
 }
 
 @article{burke1990musical,
-  title={MUSICAL PREFERENCES AS A FUNCTION OF STIMULUS COMPLEXITY AND LISTENERS'SOPHISTICATION},
+  title={Musical Preferences as a Function of Stimulus Complexity and Listeners' Sophistication},
   author={Burke, Michael J and Gridley, Mark C},
   journal={Perceptual and Motor Skills},
   volume={71},
@@ -770,7 +770,7 @@ year = {2015}
 }
 
 @article{crockford2006application,
-  title={The application/json media type for javascript object notation (json)},
+  title={The application/json media type for {JavaScript} object notation (json)},
   author={Crockford, Douglas},
   year={2006}
 }
@@ -783,8 +783,8 @@ year = {2015}
 }
 
 @book{midi1996complete,
-  title={The complete MIDI 1.0 detailed specification: incorporating all recommended practices},
-  author={MIDI Manufacturers Association and others},
+  title={The complete {MIDI} 1.0 detailed specification: incorporating all recommended practices},
+  author={{MIDI} Manufacturers Association and others},
   year={1996},
   publisher={MIDI Manufacturers Association}
 }
@@ -854,7 +854,7 @@ year = {2015}
 
 @inproceedings{Chi2000,
  author = {Chi, Diane and Costa, Monica and Zhao, Liwei and Badler, Norman},
- title = {The EMOTE Model for Effort and Shape},
+ title = {The {EMOTE} Model for Effort and Shape},
  booktitle = {Proceedings of the 27th Annual Conference on Computer Graphics and Interactive Techniques},
  series = {SIGGRAPH '00},
  year = {2000},
