--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -154,7 +154,7 @@ This thesis is based on research submitted for publication at ONWARD'15.
 
 % GRANT INFORMATION
 
-That this work received support from a Virginia Tech ICAT SEED grant.
+That this work received support from a Virginia Tech ICAT SEAD grant.
 
 \pagebreak
 
@@ -200,7 +200,7 @@ I also owe a great deal of thanks to Dr. Cliff Shaffer, a dedicated professor an
 
 I generously thank the members of my software engineering research group, without whom much of this research would not have been possible. I must express significant thanks to all of the other various professors and advisors who have worked with me over my years at Virginia Tech. Among all of these, I would be remiss if I did not expressly thank Mrs. Terry Arthur. Your guidance from the very first time I met you, before I even began classes, all the way through until my end as an undergraduate has been outstanding in every way. Last but not least, I must thank all of my other family and friends who pushed me to achieve as much as I have.
 
-I would like to express my gratitude to the members of the Interdisciplinary Research Honor Society at Virginia Tech for their feedback during the early stages of this project. This project is supported in part by funding from a Virginia Tech ICAT SEED grant.
+I would like to express my gratitude to the members of the Interdisciplinary Research Honor Society at Virginia Tech for their feedback during the early stages of this project. This project is supported in part by funding from a Virginia Tech ICAT SEAD grant.
 
 \pagebreak
 
