Finalize thesis and submitted to graduate school (awaiting approval in case further changes may be required).
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -582,11 +582,14 @@ year = {2015}
   organization={ACM}
 }
 
-@thesis{holder2014native,
+@mastersthesis{holder2014native,
   title={Native Execution of Mobile Applications Across Platforms},
   author={Holder, Ethan G.},
+  month={May},
   year={2014},
-  school={Virginia Polytechnic Institute and State University}
+  school={Virginia Polytechnic Institute and State University},
+  type={{Honors Bachelor's Thesis}},
+  document_type={{Honors Bachelor's Thesis}}
 }
 
 @Misc{mysql,
@@ -770,7 +773,7 @@ year = {2015}
 }
 
 @article{crockford2006application,
-  title={The application/json media type for {JavaScript} object notation (json)},
+  title={The application/json media type for {JavaScript} object notation ({JSON})},
   author={Crockford, Douglas},
   year={2006}
 }
