Adding final approved thesis. All done!

--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -931,6 +931,8 @@ This paper presented musiplectics, a new computational paradigm, that systematic
 \bibliographystyle{abbrv}
 \markright{Ethan G. Holder  \hfill Bibliography \hfill}
 %\thebibliography{HolderThesis2015}
+\cleardoublepage
+\phantomsection
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliography{HolderThesis2015}
 
